# COAParser

./: .gitignore  CLEAR_CACHE.bat  COAParser.spec  README.md  build_exe.py  build_installer.py  check_vocab.py  debug_extraction_steps.py  debug_loq_issue.py  debug_product_name.py  debug_sweet_cherry.py  debug_table_structure.py  diagnose.py  diagnose_current.py  diagnostic_output.txt  dump_structure.py  extract.bat  full_diagnostic.py  launcher.py  pdf_dump.txt  pyproject.toml  python.bat  requirements.txt  run_fresh.bat  show_exact_table.py  show_raw_structure.py  show_raw_tables.py  temp  tesseract_config.py  test_and_reset.bat  test_ocr.py  test_result_extraction.py  test_simplified.py  view_lines.py
data/: aliases.json
portable/: README.md  app.py  config.json  launcher.bat  launcher.py  requirements.txt  run_fresh.bat  setup_portable.bat
portable/Output/: 2501PLO0014.0044 - Shico LLC - Sweet Cherry 100mg THC_50mg THCv 2_1 Fruit Chews (1).txt  77extracts@gmail.com.txt  Flower & Buds - Cherry Payton - (g).txt  Type- Flower & Buds bulk.txt
portable/data/: cannabinoids.json  terpenes.json
portable/src/: __init__.py  parser.py
portable/src/core/: detector.py  extractor.py  logger.py  normalizer.py
portable/src/gui/: main_window.py
portable/src/parsers/: base.py  confident.py  gateway.py
src/: __init__.py  parser.py
src/core/: detector.py  extractor.py  logger.py  normalizer.py  writer.py
src/gui/: main_window.py
src/models/: result.py
src/parsers/: aerolabs.py  base.py
tests/: test_parser.py
