[project]
name = "coa-parser"
version = "0.1.0"
description = "A universal COA parser application"
requires-python = ">=3.10"
dependencies = [
    "PySide6>=6.11.1",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["src"]
